# sherpa_msgs

./: CMakeLists.txt  LICENSE  README.md  package.xml
action/: LogEvent.action  Mount.action  MoveTo.action  PerformDesignator.action  SetAltitude.action  TakePicture.action  ToggleActuator.action  ToggleVictimTracking.action
msg/: Battery.msg  Beacon.msg  LoggedBattery.msg  LoggedBatteryList.msg  LoggedIdentifier.msg  LoggedRDFEntry.msg
srv/: PerformDesignator.srv
